Add img description ingrediant steps in krapow.html

--- a/recipes/krapow.html
+++ b/recipes/krapow.html
@@ -10,6 +10,36 @@
 
 <body>
   <h1>Krapow</h1>
+  <img src="../img/krapow.jpeg" alt="krapow-image">
+  <h3>Description</h3>
+  <p>Krapow is popular Thai dish with spicy stir-fry with holy basil. </p>
+  <h3>ingrediants</h3>
+  <ul>
+    <li>Sauce
+      <ul>
+        <li>Chicken broth</li>
+        <li>oyster sauce</li>
+        <li>fish sauce</li>
+        <li>white sugar</li>
+        <li>dark soy sauce</li>
+      </ul>
+    </li>
+    <li>Meat</li>
+    <li>Garlic</li>
+    <li>Hot chile peppers</li>
+    <li>Holy basil</li>
+  </ul>
+  <h3>Steps</h3>
+  <ol>
+    <li>Heat your wok on high heat, and add about 1 tablespoon of oil to the pan.</li>
+    <li>When the oil is hot, add the chilies and garlic. Stir fry them for about 20 seconds or so until they get really fragrant, but don't let them burn or get too dry.</li>
+    <li>Toss in your chicken. Keep stir frying continuously. At this stage you want to continue to stir and cook your chicken until it's just about fully cooked all the way through (depending on the size pieces of chicken and how hot your fire is, it should take about 2 - 3 minutes). If it starts to get dry, add just a tiny splash of water.</li>
+    <li>Add 1 teaspoon of oyster sauce, ½ teaspoon fish sauce, ½ teaspoon sugar, and finally a splash of dark soy sauce. Keep stir frying for about another 30 seconds.</li>
+    <li>Grab a handful of holy basil, toss it into the pan, fold it into the chicken, and then immediately turn off the heat (if you're using an electric stove, you'll want to remove the pan from the burner). The holy basil really only needs to cook for about 5 seconds, and it will continue to wilt and cook from the existing heat of the chicken. This step is important because if you cook the basil for too long, it loses some of its glorious flavor and gets slightly chewy</li>
+  </ol>
+
+
+
 
 </body>
 
