Fix minor spell add spaghetti recipe and add all content

--- a/recipes/krapow.html
+++ b/recipes/krapow.html
@@ -13,7 +13,7 @@
   <img src="../img/krapow.jpeg" alt="krapow-image">
   <h3>Description</h3>
   <p>Krapow is popular Thai dish with spicy stir-fry with holy basil. </p>
-  <h3>ingrediants</h3>
+  <h3>Ingrediants</h3>
   <ul>
     <li>Sauce
       <ul>
