--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 
   <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/krapow.html">Krapow</a>
+    <ul>
+      <li><a href="./recipes/krapow.html">Krapow</a></li>
+      <li><a href="./recipes/spaghetti-ag.html">Spaghetti Aglio e Olio</a></li>
+
+    </ul>
   </body>
 
 
