add style to recipe pages

--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Odin Recipes</title>
+    <link rel="stylesheet" href="./css/styles.css">
   </head>
 
 
   <body>
     <h1>Odin Recipes</h1>
-    <ul>
+    <ul class="link">
       <li><a href="./recipes/krapow.html">Krapow</a></li>
       <li><a href="./recipes/spaghetti-ag.html">Spaghetti Aglio e Olio</a></li>
 
