--- a/recipes/krapow.html
+++ b/recipes/krapow.html
@@ -6,11 +6,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Krapow</title>
+  <link rel="stylesheet" href="../css/styles.css">
 </head>
 
 <body>
   <h1>Krapow</h1>
-  <img src="../img/krapow.jpeg" alt="krapow-image">
+  <img src="../img/krapow.jpeg" alt="krapow-image" class="image">
   <h3>Description</h3>
   <p>Krapow is popular Thai dish with spicy stir-fry with holy basil. </p>
   <h3>Ingrediants</h3>
