--- a/recipes/spaghetti-ag.html
+++ b/recipes/spaghetti-ag.html
@@ -4,11 +4,12 @@
 <head>
   <meta charset="utf-8">
   <title>Spaghetti Aglio e Olio</title>
+  <link rel="stylesheet" href="../css/styles.css">
 </head>
 
 <body>
   <h1>Spaghetti Aglio e Olio</h1>
-  <img src="../img/Spaghetti-Aglio-e-Olio.jpg" alt="spaghetti-image">
+  <img src="../img/Spaghetti-Aglio-e-Olio.jpg" alt="spaghetti-image" class="image">
   <h3>Description</h3>
   <p>Classic Spaghetti Aglio e Olio is easy to make with just 4 simple ingredients (spaghetti, olive oil, garlic and crushed red pepper flakes), it comes together in 20 minutes, and it is always such a winner. cr.https://www.gimmesomeoven.com/</p>
   <h3>Ingrediants</h3>
